--- a/Views/Todo/_TodoListPartial.cshtml
+++ b/Views/Todo/_TodoListPartial.cshtml
@@ -28,15 +28,25 @@
             <div class="d-flex justify-content-between my-1">
                 @if (item.description.Length <= 64)
                 {
-                    <div class="w-75">@item.description</div>
+                    <div class="w-50">@item.description</div>
                 }
                 else
                 {
-                    <div class="w-75">
+                    <div class="w-50">
                         <span>
                             @item.description.Substring(0, 60)
                         </span>
                         <span>...</span>
+                    </div>
+                }
+                @if (item.end_date != null)
+                {
+                    <div>@item.end_date</div>
+                }
+                @if(item.has_file == 1)
+                {
+                    <div class="d-flex justify-content-between">
+                        <i class="fa fa-file"></i>
                     </div>
                 }
                 @{
@@ -80,4 +90,12 @@
             <div style="width: 35px;"></div>
         }
     </div>
+}
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+        <script src="~/js/Todo.js" asp-append-version="true"></script>
+    }
+    
 }
