--- a/Views/Todo/Create.cshtml
+++ b/Views/Todo/Create.cshtml
@@ -110,6 +110,20 @@
                         <option value=2>完了</option>
                     </select>
                 </div>
+                <div class="col-md-6 mb-3">
+                    <label asp-for="@Model.MyStaffList" class="control-label"></label>
+                    <select asp-for="@Model.MyStaffList" class="form-control" multiple>
+                        <option value=""></option>
+                        @if (Model.staffList != null)
+                        {
+                            @foreach (var item in Model.staffList)
+                            {
+                                <option value="@item.staff_cd">@item.staff_name</option>
+                            }
+                        }
+                    </select>
+                    <span asp-validation-for="@Model.staffList" class="text-danger"></span>
+                </div>
             </div>
 
             <div class="card-footer">
