--- a/Views/Todo/Update.cshtml
+++ b/Views/Todo/Update.cshtml
@@ -40,6 +40,7 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input hidden asp-for="@Model.id" />
                 <input hidden asp-for="@Model.Delete_files" />
+                <input hidden asp-for="@Model.has_file" />
 
                 <div class="form-group mb-3">
                     <label asp-for="@Model.public_set" class="form-label"></label>
@@ -114,6 +115,20 @@
                         <option value=1>対応中</option>
                         <option value=2>完了</option>
                     </select>
+                </div>
+                <div class="col-md-6 mb-3">
+                    <label asp-for="@Model.MyStaffList" class="control-label"></label>
+                    <select asp-for="@Model.MyStaffList" class="form-control" multiple>
+                        <option value=""></option>
+                        @if (Model.staffList != null)
+                        {
+                            @foreach (var item in Model.staffList)
+                            {
+                                <option value="@item.staff_cd">@item.staff_name</option>
+                            }
+                        }
+                    </select>
+                    <span asp-validation-for="@Model.staffList" class="text-danger"></span>
                 </div>
             </div>
 
