--- a/Views/Todo/Index.cshtml
+++ b/Views/Todo/Index.cshtml
@@ -96,7 +96,7 @@
                         }
                         @if (item.deadline_date != null)
                         {
-                            <div>@item.deadline_date</div>
+                            <div class="deadline-date" data-deadline-date="@item.deadline_date">@item.deadline_date</div>
                         }
                         else
                         {
