--- a/Views/BukkenMemo/Index.cshtml
+++ b/Views/BukkenMemo/Index.cshtml
@@ -58,8 +58,8 @@
                 {
                     <tr>
                         <td>
-                            <a asp-controller="BukkenMemo" asp-action="BukkenMemoDetail" asp-route-bukken_cd="@capsule.bukken_cd" asp-route-cond_bukken_name="@Model.cond_bukken_name">
-                                【@capsule.bukken_cd】@capsule.bukken_name
+                            <a asp-controller="BukkenMemo" asp-action="BukkenMemoDetail" asp-route-bukn_cd="@capsule.bukn_cd" asp-route-cond_bukken_name="@Model.cond_bukken_name">
+                                【@capsule.bukn_cd】@capsule.bukken_name
                             </a>
                         </td>
                         <td>
