--- a/Views/Board/Create.cshtml
+++ b/Views/Board/Create.cshtml
@@ -38,13 +38,30 @@
                 <div class="card-body">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-                    @*<input hidden asp-for="@Model.applicant_type" />*@
                     <input hidden asp-for="@Model.applicant_cd" />
+                    <input hidden asp-for="@Model.status" />
+                    <input hidden asp-for="@Model.category_cd" />
 
                     <div class="form-group mb-3">
                         <label asp-for="@Model.title" class="form-label"></label>
                         <input type="text" asp-for="@Model.title" class="form-control bg-white" />
                         <span asp-validation-for="@Model.title" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group mb-3">
+                        <div class="col-sm-4">
+                            <label asp-for="@Model.category_cd" class="form-label"></label>
+                            <select class="form-select bg-white" id="board_category">
+                                <option value=""></option>
+                                @if (Model.CategoryList != null)
+                                {
+                                    @foreach (var item in Model.CategoryList)
+                                    {
+                                        <option value=@item.category_cd>@item.category_name</option>
+                                    }
+                                }
+                            </select>
+                        </div>
                     </div>
 
                     <div class="form-group mb-3">
@@ -54,20 +71,27 @@
                         <span asp-validation-for="@Model.content" class="text-danger"></span>
                     </div>
 
-                    <div class="form-group mb-3 row">
+                    <div class="form-group mb-3">
                         <label asp-for="@Model.applicant_cd" class="form-label"></label>
                         <div class="col-12 col-md-3">
                             <select class="form-select bg-white" id="applicant">
                                 <option value=""></option>
-                                @if (Model.staffList != null)
+                                @if (Model.StaffList != null)
                                 {
-                                    @foreach (var item in Model.staffList)
+                                    @foreach (var item in Model.StaffList)
                                     {
                                         <option value=@item.staff_cd>@item.staff_name</option>
                                     }
                                 }
                             </select>
                         </div>
+                    </div>
+
+                    <div class="form-group form-check mb-3 ms-1">
+                        <label class="form-check-label">
+                            <input class="form-check-input" asp-for="@Model.show_on_top" />
+                            @Html.DisplayNameFor(model => model.show_on_top)
+                        </label>
                     </div>
 
                     <div class="form-group">
